backend/tests/setup.ts
// Test setup file
global.console = {
  ...console,
  // Uncomment to ignore specific logs during tests
  // warn: jest.fn(),
  // error: jest.fn(),
};